<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cardboard VNC</string>
    <string name="edit_name">Name:</string>
    <string name="edit_host">Host:Port</string>
    <string name="edit_username">Username:</string>
    <string name="edit_password">Password (optional):</string>
    <string name="edit_colormode">Colors:</string>
    <string name="edit_viewonly">Viewer mode</string>
    <string name="action_save">Save</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_edit">Edit Server</string>
    <string name="title_activity_settings">Preferences</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="hello_world">Hello world!</string>
    <string name="screenconfig">Screen Configuration</string>
    <string name="pref_camera">Camera Preview</string>
    <string name="pref_camera_summ">Enable camera preview in viewer</string>
    <string name="pref_screen_title">Screen</string>
    <string name="pref_screenSize">Screen Size</string>
    <string name="pref_screenSize_default">3</string>
    <string name="pref_screenSize_summ">Select size of the virtual screen</string>
    <string name="pref_screenType">Screen Layout</string>
    <string name="pref_screenType_default">Medium</string>
    <string name="pref_category_headset_title">Headset Setup</string>
    <string name="pref_lensSpacing_title">Inter-lens distance</string>
    <string name="pref_lensScreenDist_title">Screen to lens distance</string>
    <string name="pref_lensVertDist_title">Vertical distance to lens center</string>
    <string name="pref_previewSize_title">Select size of the Camera preview</string>
    <string name="pref_bgColor_title">Background Color</string>
    <string name="pref_bgColor_summary">Color in #RRGGBB or #AARRGGBB format.</string>
    <string name="pref_orientationProvider_title">Orientation Provider</string>
    <string name="pref_useLocalCursor_title">Enable local cursor</string>
    <string name="action_about">About</string>
    <string name="variant_name_pro" translatable="false">pro</string>
    <string name="app_about" translatable="false">Copyright 2015, Chai Software</string>
    <string name="app_about_fullversion" translatable="false"><![CDATA[If you like this app, please consider purchasing the <a href="market://details?id=se.chai.cardboardremotedesktop.pro">full version</a> to remove ads and support further development.]]></string>
    <string name="app_credits" translatable="false"><![CDATA[Cardboard VNC includes open source <a href="https://bitbucket.org/apacha/sensor-fusion-demo/">sensor fusion code</a>. Copyright 2013 by Alexander Pacha and the Human Technology Laboratory New Zeeland, released under the <a href=\"https://opensource.org/licenses/MIT\">MIT license</a>.]]></string>

    <string-array name="pref_orientationProvider_entries" translatable="false">
        <item>"Google Cardboard SDK"</item>
        <item>"Manual touch input"</item>
        <item>"Improved Orientation Sensor"</item>
        <item>"Calibrated Gyroscope"</item>
        <!--<item>"ImprovedOrientationSensor1"</item>-->
        <!--<item>"RotationVector"</item>-->
        <!--<item>"GravityCompass"</item>-->
        <!--<item>"AccelerometerCompass"</item>-->
        <!--<item>"ImprovedOrientationSensor1 Magnet"</item>-->
        <!--<item>"ImprovedOrientationSensor2 Magnet"</item>-->
        <!--<item>"RotationVector Magnet"</item>-->
    </string-array>
    <string-array name="pref_orientationProvider_values" translatable="false">
        <item>"0"</item>
        <item>"1"</item>
        <item>"2"</item>
        <item>"3"</item>
        <item>"4"</item>
        <item>"5"</item>
        <item>"6"</item>
        <item>"7"</item>
        <item>"8"</item>
        <item>"9"</item>
        <item>"10"</item>
    </string-array>
</resources>
