<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:chai="http://cardboardremotedesktop.chai.se">
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_camera"
        android:summary="@string/pref_camera_summ"
        android:title="@string/pref_camera" />
    <se.chai.cardboardremotedesktop.SeekBarPreference
        android:key="pref_previewSize"
        android:title="@string/pref_previewSize_title"
        android:defaultValue="100"
        android:max="150"
        chai:min="50"
        chai:unitsLeft=""
        chai:unitsRight="%"/>
    <!--    <PreferenceCategory
            android:title="@string/pref_screen_title"
            android:key="pref_key_screen_settings">-->
    <!--<ListPreference-->
        <!--android:defaultValue="@string/pref_screenSize_default"-->
        <!--android:dialogTitle="@string/pref_screenSize"-->
        <!--android:entries="@array/pref_screenSize_entries"-->
        <!--android:entryValues="@array/pref_screenSize_values"-->
        <!--android:key="pref_screenSize"-->
        <!--android:summary="@string/pref_screenSize_summ"-->
        <!--android:title="@string/pref_screenSize" />-->
    <!--<se.chai.cardboardremotedesktop.SeekBarPreference-->
        <!--android:key="pref_screenSize2"-->
        <!--android:title="@string/pref_screenSize"-->
        <!--android:defaultValue="100"-->
        <!--android:max="150"-->
        <!--chai:min="50"-->
        <!--chai:unitsLeft=""-->
        <!--chai:unitsRight="%"/>-->
    <EditTextPreference
        android:defaultValue="#88111111"
        android:key="pref_bgColor"
        android:title="@string/pref_bgColor_title"
        android:summary="@string/pref_bgColor_summary"/>
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pref_useLocalCursor"
        android:title="@string/pref_useLocalCursor_title" />
    <!--<ListPreference-->
            <!--android:key="pref_screenType"-->
            <!--android:title="@string/pref_screenType"-->
            <!--android:dialogTitle="@string/pref_screenType"-->
            <!--android:entries="@array/pref_screenType_entries"-->
            <!--android:entryValues="@array/pref_screenType_entries"-->
            <!--android:defaultValue="@string/pref_screenType_default" />-->
    <!--    </PreferenceCategory>-->
    <PreferenceCategory android:title="@string/pref_category_headset_title">
        <ListPreference
            android:key="pref_orientationProvider"
            android:entries="@array/pref_orientationProvider_entries"
            android:entryValues="@array/pref_orientationProvider_values"
            android:defaultValue="0"
            android:title="@string/pref_orientationProvider_title" />
        <se.chai.cardboardremotedesktop.SeekBarPreference
            android:key="pref_lensSpacing"
            android:title="@string/pref_lensSpacing_title"
            android:defaultValue="60"
            android:max="80"
            chai:min="50"
            chai:unitsLeft=""
            chai:unitsRight="mm"/>
        <se.chai.cardboardremotedesktop.SeekBarPreference
            android:key="pref_lensScreenDist"
            android:title="@string/pref_lensScreenDist_title"
            android:defaultValue="42"
            android:max="60"
            chai:min="30"
            chai:unitsLeft=""
            chai:unitsRight="mm"/>
        <se.chai.cardboardremotedesktop.SeekBarPreference
            android:key="pref_lensVertDist"
            android:title="@string/pref_lensVertDist_title"
            android:defaultValue="35"
            android:max="50"
            chai:min="20"
            chai:unitsLeft=""
            chai:unitsRight="mm"/>
    </PreferenceCategory>
</PreferenceScreen>